feat(auth,report,user): 同步前後端契約與交接進度